--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@ body {
 
 h1 {
     text-align: center;
+    color: rgb(240, 135, 153);
     font-family:Arial, Helvetica, sans-serif;
     font-weight:700;
 }
 
 input {
+    border: 2px solid rgb(255, 0, 106);
+    box-shadow: 0 0 4px rgb(255, 26, 122); 
+    color: rgb(129, 0, 43);
+    border-radius: 10px;
     text-align: center;
     padding: 10px;
+    outline: none;
 }
 .input {
     padding: 10px;
@@ -34,10 +40,18 @@ input {
 }
 
 button {
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    background-color: rgb(255, 189, 200);
     margin-top: 20px;
     margin-left: 550px;
     width: 100px;
     padding: 10px;
+}
+
+button:hover {
+    background-color: rgb(255, 137, 157);
 }
 
 .line {
@@ -51,12 +65,15 @@ button {
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     font-weight:700;
-    text-align: center;
     margin-top: 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(116, 22, 46);
     padding: 20px;
     width: 5px;
     height: 30px;
-    background-color: rgb(232, 232, 232);
-    width: 100%;
+    background-color: rgb(255, 214, 226);
+    width: 25%;
+    border-radius: 90px;
+    margin-top: 40px;
+    margin-left: 435px;
 }
+
